--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
         <div class="container">
-            <a class="navbar-brand" href="#"> [Dev_id] </a>
+            <a class="navbar-brand" href="#"><b>[Dev_id]</b></a>
             <a class="btn btn-success animate__animated animate__tada"
                 href="https://api.whatsapp.com/send?phone=529631189249&text=Hola!%20me%20interesa%20una%20pagina%20web">
                 Whatsapp </a>
@@ -106,9 +106,9 @@
                 <div class="col-lg-6 order-lg-2 text-white showcase-img"
                     style="background-image: url('images/compufaceb.png');"></div>
                 <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                    <h2>Nuestro objetivo es</h2>
-                    <p class="lead mb-0">ayudar a nuestros clientes a conseguir más clientes mediante el uso de
-                        herramientas digitales (prospectos de calidad previamente segmentados).</p>
+                    <h2>Nuestro objetivo es:</h2>
+                    <p class="lead mb-0">Ayudar a nuestros clientes a conseguir más clientes mediante el uso de
+                        herramientas digitales (prospección digital de calidad).</p>
                 </div>
             </div>
             <div class="row no-gutters">
@@ -210,7 +210,7 @@
                         </li>
                         <li class="list-inline-item">&sdot;</li>
                         <li class="list-inline-item">
-                            <a href="tel:9631189249">Llamanos</a>
+                            <a href="tel:9631189249"> <b>Llámanos</b> </a>
                         </li>
                         <li class="list-inline-item">&sdot;</li>
                         <li class="list-inline-item">
