--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
         <div class="container">
-            <a class="navbar-brand" href="#"> [Dev_id] </a>
+            <a class="navbar-brand" href="#"> <b>[Dev_id]</b> </a>
             <a class="btn btn-success animate__animated animate__tada"
                 href="https://api.whatsapp.com/send?phone=529631189249&text=Hola!%20me%20interesa%20una%20pagina%20web">
                 Whatsapp </a>
