--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-light bg-light static-top">
+    <nav class="navbar sticky-top navbar-light bg-transparent">
         <div class="container">
             <a class="navbar-brand" href="#"><b>[Dev_id]</b></a>
             <a class="btn btn-success animate__animated animate__tada"
@@ -41,8 +41,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-9 mx-auto">
-                    <h1 class="mb-5">Crea tu primer sitio web y lleva tu negocio a internet.
-                        Obtén una evaluación gratis.</h1>
+                    <h1 class="mb-5">Obtén tu primer sitio web y lleva tu negocio a internet.
+                        Solicita una evaluación gratis.</h1>
                 </div>
                 <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
                     <form>
@@ -201,9 +201,6 @@
             <div class="row">
                 <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
                     <ul class="list-inline mb-2">
-                        <li class="list-inline-item">
-                            <a href="#">Evaluación</a>
-                        </li>
                         <li class="list-inline-item">&sdot;</li>
                         <li class="list-inline-item">
                             <a href="https://forms.gle/Yms3aGvKYbUMiGfM7">Prueba Gratis</a>
@@ -212,28 +209,29 @@
                         <li class="list-inline-item">
                             <a href="tel:9631189249"> <b>Llámanos</b> </a>
                         </li>
-                        <li class="list-inline-item">&sdot;</li>
-                        <li class="list-inline-item">
-                            <a href="https://www.tuprimerpaginaweb.com">Dev_id</a>
-                        </li>
                     </ul>
                     <p class="text-muted small mb-4 mb-lg-0">&copy; Dev_id | 2020. All Rights Reserved.</p>
                 </div>
                 <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
                     <ul class="list-inline mb-0">
                         <li class="list-inline-item mr-3">
-                            <a href="https://www.facebook.com/david.gonzalezsantis">
+                            <a href="https://www.facebook.com/devidwebdevelopment">
                                 <i class="fab fa-facebook fa-2x fa-fw"></i>
                             </a>
                         </li>
                         <li class="list-inline-item mr-3">
-                            <a href="https://www.facebook.com/dmarketingmx">
-                                <i class="fab fa-twitter-square fa-2x fa-fw"></i>
+                            <a href="mailto:davidglezsantis@gmail.com?subject=Quiero%20mas%20informacion%20sobre%20mi%20primer%20pagina%20web">
+                                <i class="fas fa-envelope fa-2x fa-fw"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://www.instagram.com/davidglezsantis">
                                 <i class="fab fa-instagram fa-2x fa-fw"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="http://www.desarrolloweb.digital">
+                                <i class="fas fa-user-astronaut fa-2x fa-fw"></i>
                             </a>
                         </li>
                     </ul>
